# sbf

./: .cproject  .gitignore  .project  CMakeList.txt  CMakeLists.txt  config.h.in  libsbf.pro  makePythonBinding.sh  sbfConfig.cmake.in  sbfConfigVersion.cmake.in
boost.python/: CMakeLists.txt  class_sbfElement.cpp  class_sbfElement.h  class_sbfElementGroup.cpp  class_sbfElementGroup.h  class_sbfGroupFilter.cpp  class_sbfGroupFilter.h  class_sbfMesh.cpp  class_sbfMesh.h  class_sbfNode.cpp  class_sbfNode.h  class_sbfSELevel.cpp  class_sbfSELevel.h  class_sbfSELevelList.cpp  class_sbfSELevelList.h  iterable_converter.hpp  sbf_wrap.cpp
doc/: elementsIndexes.txt
doc/theory/hexa_quad/: stiff_equations.wxm
src/: CMakeLists.txt  generateUnrolledFunctions.py  libsbf.i  libsbf.py  libsbf_wrapper.cxx  sbf.h  sbfAdditions.cpp  sbfAdditions.h  sbfDeclspec.h  sbfElemStiffMatrix.cpp  sbfElemStiffMatrix.h  sbfElemStiffMatrixBeam6Dof.cpp  sbfElemStiffMatrixBeam6Dof.h  sbfElemStiffMatrixHexa20.cpp  sbfElemStiffMatrixHexa20.h  sbfElemStiffMatrixHexa8.cpp  sbfElemStiffMatrixHexa8.h  sbfElement.cpp  sbfElement.h  sbfElementGroup.cpp  sbfElementGroup.h  sbfEnums.h  sbfFunctions.cpp  sbfFunctions.h  sbfGroup.cpp  sbfGroup.h  sbfGroupFilter.cpp  sbfGroupFilter.h  sbfMaterialProperties.cpp  sbfMaterialProperties.h  sbfMatrix.h  sbfMatrixIterator.cpp  sbfMatrixIterator.h  sbfMesh.cpp  sbfMesh.h  sbfMeshBuilders.cpp  sbfMeshBuilders.h  sbfNode.cpp  sbfNode.h  sbfNodeGroup.cpp  (+58 more)
src/geom/: sbfgeom2darc.cpp  sbfgeom2darc.h  sbfgeom2dedge.cpp  sbfgeom2dedge.h  sbfgeom2dface.cpp  sbfgeom2dface.h  sbfgeom2dline.cpp  sbfgeom2dline.h
src_old/: sbfDeclspec.h  sbfMatrix.cpp  sbfMesh.cpp  sbfMesh.h  sbfMeshVTK.cpp  sbfProperty.cpp
swig/: CMakeLists.txt  swig.i  swig_back.i
tests/: CMakeLists.txt  main.cpp  meshbuilders.cpp  sbfSElement.cpp  sbfStiffMatrixBand.cpp  sbfStiffMatrixBandIterator.cpp  sbfStiffMatrixBlockIterator.cpp  sbfselement.cpp  test_sbfAdditions.cpp  test_sbfAdditions.h  test_sbfElement.cpp  test_sbfElement.h  test_sbfMatrixIterator.cpp  test_sbfMatrixIterator.h  test_sbfMesh.cpp  test_sbfMesh.h  test_sbfNode.cpp  test_sbfNode.h  test_sbfParalleltask.cpp  test_sbfParalleltask.h  test_sbfReporter.cpp  test_sbfReporter.h  test_sbfWorker.cpp  test_sbfWorker.h  test_stiffMatrices.cpp  test_stiffMatrices.h  test_stiffMatrixes.cpp  test_stiffMatrixes.h  tests.pro
tests/simpleStiff/: CMakeLists.txt  bricks.cpp
