if(MAKE_PYTHON_BINDING)
    FIND_PACKAGE(SWIG REQUIRED)
    include(${SWIG_USE_FILE})

    FIND_PACKAGE(PythonLibs)
    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

    INCLUDE_DIRECTORIES(./../src)

    SET(CMAKE_SWIG_FLAGS "-c++")

    SET_SOURCE_FILES_PROPERTIES(swig.i PROPERTIES CPLUSPLUS ON)
    SET_SOURCE_FILES_PROPERTIES(swig.i PROPERTIES SWIG_FLAGS "-includeall")
    SWIG_ADD_MODULE(sbf python swig.i)
    SWIG_LINK_LIBRARIES(sbf ${PYTHON_LIBRARIES} ${PROJECT_NAME})
endif()
